# arch-line-weights

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  RETROSPECTIVE.md  SECURITY.md  SHIP_CHECKLIST.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
.github/workflows-disabled/: README.md  release.yml.disabled
BUSINESS/: index.html
CHANGELOG/: index.html
LESSONS_LEARNED/: index.html
POSTMORTEM/: index.html
ROADMAP/: index.html
SESSION_RETRO/: index.html
announce/BLOG_POST_OUTLINE/: index.html
announce/REDDIT_ARCHITECTURE/: index.html
announce/REDDIT_PYTHON/: index.html
announce/SHOW_HN/: index.html
docs/: BUSINESS.md  CHANGELOG.md  LESSONS_LEARNED.md  POSTMORTEM.md  ROADMAP.md  SESSION_RETRO.md  index.md
docs/announce/: BLOG_POST_OUTLINE.md  LAUNCH_KIT.md  REDDIT_ARCHITECTURE.md  REDDIT_PYTHON.md  SHOW_HN.md
docs/explanation/: how-poche-works.md  the-postmortem.md  why-this-tool-exists.md
docs/how-to/: apply-line-weights.md  designer-console.md  generate-poche.md  material-hatching.md  private-studio-dogfood-runbook.md  supported-inputs.md  troubleshoot.md  use-with-rhino.md  vercel-pr-previews.md
docs/reference/: cli.md  python-api.md
docs/research/: ai-augmented-mode.md  alpha-shape-impl-notes.md  applescript-illustrator-gotchas.md  apply-jsx-bugfixes-notes.md  apply-jsx-converted-trailing-space.md  apply-saas-port-notes.md  architectural-graphics-rulebook.md  architectural-reference-library.md  autocad-ncs-impl-notes.md  benchmarks.md  binary-distribution.md  bridge-best-perf-fix.md  bridge-improvements-notes.md  bridge-strategy-wire-notes.md  competitive-landscape-v2.md  competitive-landscape.md  customer-interviews.md  deadline-workflow-2026-05-05.md  demo-gallery-notes.md  disconnected-loops.md  distribution-platforms.md  endgame-delivery-plan-2026-06-01.md  entourage-rulebook.md  github-actions-budget-2026-05-05.md  hatch-library-expansion.md  human-landing-plan-2026-06-01.md  hybrid-local-helper.md  inspect-pikepdf-port-notes.md  iso-axon-section-debug-log-2026-05-05.md  layer-name-patterns.md  licensing.md  lineweight-rulebook.md  llm-topology-impl-notes.md  make2d-completion-architecture.md  manual-illustrator-poche-workflow.md  marketing-channels.md  merge-readiness-packet-2026-06-01.md  open-issue-verification-core-handoff-2026-06-01.md  pdf-only-acceptance.md  personal-use-log.md  (+21 more)
docs/tutorials/: your-first-section-drawing.md
examples/: sample-mapping.json
explanation/how-poche-works/: index.html
explanation/the-postmortem/: index.html
explanation/why-this-tool-exists/: index.html
how-to/apply-line-weights/: index.html
how-to/generate-poche/: index.html
how-to/material-hatching/: index.html
how-to/troubleshoot/: index.html
how-to/use-with-rhino/: index.html
integrations/rhino/: README.md  apply_arch_hierarchy.py  arch_lw_button.py  export_selected_make2d_manifest.py  tag_rhino_layers_for_poche.py
reference/cli/: index.html
reference/python-api/: index.html
references/: manifest.yml
research/: benchmarks.json
research/ai-augmented-mode/: index.html
research/alpha-shape-impl-notes/: index.html
research/applescript-illustrator-gotchas/: index.html
research/apply-jsx-bugfixes-notes/: index.html
research/apply-jsx-converted-trailing-space/: index.html
research/apply-saas-port-notes/: index.html
research/architectural-graphics-rulebook/: index.html
research/architectural-reference-library/: index.html
research/autocad-ncs-impl-notes/: index.html
research/benchmarks/: index.html
research/binary-distribution/: index.html
research/bridge-best-perf-fix/: index.html
research/bridge-improvements-notes/: index.html
research/bridge-strategy-wire-notes/: index.html
research/competitive-landscape/: index.html
research/customer-interviews/: index.html
research/demo-gallery-notes/: index.html
research/disconnected-loops/: index.html
research/distribution-platforms/: index.html
research/entourage-rulebook/: index.html
research/hatch-library-expansion/: index.html
research/hybrid-local-helper/: index.html
research/inspect-pikepdf-port-notes/: index.html
research/iso-axon-section-debug-log-2026-05-05/: index.html
research/layer-name-patterns/: index.html
research/licensing/: index.html
scripts/: benchmark.py  build_reference_index.py  demo_gallery.py
search/: search_index.json
tests/: test_alpha_shape.py  test_apply_default_output_paths.py  test_apply_jsx_bugs.py  test_apply_jsx_converted_match.py  test_apply_saas.py  test_apply_saas_no_payload.py  test_apply_saas_poche.py  test_architectural_mode.py  test_basic.py  test_bridge.py  test_bridge_rhino_ai.py  test_bridge_strategy.py  test_cleanup.py  test_cli_input_preflight.py  test_cli_proof_check.py  test_designer_console.py  test_diagnose_report.py  test_entourage.py  test_hatch_v05.py  test_input_format.py  test_launch_safety_docs.py  test_layer_classify.py  test_layout_jsx.py  test_line_weights.py  test_llm_topology.py  test_make2d_proof_harness.py  test_poche_report_json.py  test_presets_v05.py  test_progress.py  test_proof.py  test_rhino_integration_scripts.py  test_run_report.py
webapp/: README.md  pyproject.toml
webapp/backend/: __init__.py  compute.py  config.py  console.py  dev_console.py  main.py  schemas.py  storage.py
webapp/backend/routes/: __init__.py  console.py  health.py  jobs.py
webapp/frontend/: .env.example  .gitignore  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vercel.json  vite.config.js
webapp/frontend/src/: app.css  app.d.ts  app.html
webapp/frontend/src/lib/: ReportBlock.svelte  api.ts
webapp/frontend/src/routes/: +layout.svelte  +page.svelte
webapp/frontend/src/routes/jobs/[id]/: +page.svelte
webapp/tests/: conftest.py  test_compute.py  test_console_routes.py  test_dev_console.py  test_routes.py
(+81 files in other folders)
