[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "arch-line-weights"
dynamic = ["version"]
description = "Apply architectural line-weight hierarchy and poché to Rhino-exported .ai/.pdf drawings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "zohartito" }]
keywords = ["architecture", "illustrator", "rhino", "pdf", "stroke-width", "drawing", "poche", "cad"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "pikepdf>=8.0",
    "pymupdf>=1.24",
    "click>=8.1",
    "shapely>=2.0",
    "numpy>=1.26",
    "Pillow>=10.0",
    "zstandard>=0.22",  # required by apply_saas / poche_saas for AI24 zstd payload
    "scipy>=1.11",      # required by alpha_shape (scipy.spatial.Delaunay)
]

[project.optional-dependencies]
dev  = ["pytest>=8", "ruff>=0.7", "mypy>=1.13"]
test = ["pytest>=8"]
lint = ["ruff>=0.7", "mypy>=1.13"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
# LLM topology-inference rung (rescue rung 5 in poche.polygonize_layer).
# Opt-in only: install via `pip install arch-line-weights[llm]` and set
# ANTHROPIC_API_KEY. See docs/research/llm-topology-impl-notes.md.
llm  = ["anthropic>=0.40"]

[project.scripts]
arch-lw = "arch_line_weights.cli:cli"

[project.urls]
Homepage      = "https://github.com/zohartito/arch-line-weights"
Repository    = "https://github.com/zohartito/arch-line-weights"
Documentation = "https://zohartito.github.io/arch-line-weights/"
Issues        = "https://github.com/zohartito/arch-line-weights/issues"
Changelog     = "https://github.com/zohartito/arch-line-weights/blob/main/CHANGELOG.md"

# ---------------- Hatchling -----------------

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/arch_line_weights"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "skills/",
    "integrations/",
    "scripts/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "SECURITY.md",
    "pyproject.toml",
]

# ---------------- Tooling -----------------

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    "scripts/poche",                  # legacy v0.3 prototype scripts (kept for reference)
    "scripts/spike/saas-feasibility", # one-shot AI24 zstd discovery scripts (kept as proof)
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF003", # × in comments (intentional, means "by"/"multiply")
    "RUF001", # ambiguous unicode in strings (intentional, e.g. POCHE — French)
    "RUF002", # ambiguous unicode in docstrings
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false  # gradual typing for now

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
